--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,9 +3,7 @@
   "name": "Coby Eastwood",
   "icons": [
     {
-      "src": "c_icon.svg",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "c_icon.svg"
     }
   ],
   "start_url": ".",
